--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 lazy_static = "1.4.0"
+hardback_codec = {"path"="../hardback_codec"}
 
 [profile.release]
 #lto = true
